# GitbookTranslationAgent

./: .env.example  .gitignore  AGENT_USAGE_GUIDE.md  END_TO_END_TESTING_COMPLETION_SUMMARY.md  PERFORMANCE_TESTING_REPORT.md  README.md  SETUP_COMPLETE.md  TASK_19_COMPLETION_REPORT.md  config.yaml.example  dictionary_en.json  end_to_end_test_results.md  final_test_results.txt  glossary.example.json  glossary.json  glossary_en.json  glossary_zh-cn.json  glossary_zh-tw.json  performance_benchmark.py  pyproject.toml  requirements.txt  test_e2e_simple.py  test_results.txt  translation_quality_validation_report.md  translation_quality_validation_results.json  validate_translation_quality.py  validate_translation_quality_corrected.py  validate_translation_quality_final.py  worker.example.toml
docs/: migration-from-glossary.md  web-deployment.md  worker-setup.md
scripts/: verify-all.sh  verify-python-release.sh  verify-web-release.sh
src/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_agent_error_isolation_property.py  test_agent_execution_flow.py  test_agent_guardrails.py  test_agent_integration.py  test_agent_prompt_template.py  test_cli.py  test_correct_translation.py  test_correct_translation_property.py  test_detect_file_changes.py  test_detect_file_changes_property.py  test_end_to_end.py  test_fetch_github_files.py  test_issue_classification.py  test_load_glossary.py  test_load_glossary_property.py  test_log_progress.py  test_log_progress_property.py  test_models.py  test_monitoring.py  test_parse_markdown_property.py  test_performance.py  (+11 more)
(+169 files in other folders)
