[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitbook-translator"
version = "0.1.0"
description = "AI Agent-based GitBook documentation translator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyGithub>=2.1.1",
    "google-genai>=1.0,<3",
    "httpx>=0.27,<1",
    "openai>=1.0,<3",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
test = [
    "build>=1.2.0",
    "hypothesis>=6.92.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.30.0",
]

[project.scripts]
gitbook-translator = "gitbook_translator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gitbook_translator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
